cmake_minimum_required(VERSION 3.4)

set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_COLOR_MAKEFILE   ON)

#add_subdirectory(ioconsole)
add_subdirectory(FissionEngine)
add_subdirectory(freeGame)
#add_subdirectory(Tests)
#add_subdirectory(openGLExamples)
#add_subdirectory(FieneTestGame)
#add_subdirectory(FieneToolKit)
#add_subdirectory(SpaceX)
add_subdirectory(UltraSpace)